--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,16 @@
 			<version>1.1.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.jayway.restassured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>2.4.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.restassured</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.4.1</version>
+		</dependency>		
 	</dependencies>
 </project>
